package app.persistence.connection;

public class connectionPool {
}
